[tool.poetry]
name = "pyriak"
version = "0.2.0"
description = "A lightweight implementation of Entity Component System architecture"
authors = ["aatle <168398276+aatle@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.poetry.urls]
Repository = "https://github.com/aatle/pyriak.git"
Issues = "https://github.com/aatle/pyriak/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
line-length = 90

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "C4",
  "ARG",
  "SIM",
  "PIE",
  "BLE",
  "FBT",
  "ISC",
  "RSE",
  "RET",
  "SLOT",
  "PERF",
  "RUF",
  # "FURB",
]
ignore = ["SIM105"]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
